--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "preview": "astro preview",
     "sync": "astro sync",
     "astro": "astro",
-    "format:check": "prettier --plugin-search-dir=. --check .",
-    "format": "prettier --plugin-search-dir=. --write .",
+    "format:check": "prettier --check .",
+    "format": "prettier --write .",
     "cz": "cz",
     "prepare": "husky install",
     "lint": "eslint ."
