--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@astrojs/check": "^0.2.1",
     "@astrojs/mdx": "^1.1.5",
     "@astrojs/rss": "^3.0.0",
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@resvg/resvg-js": "^2.4.1",
     "astro": "^3.1.3",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
-    "remark-collapse": "^0.1.2",
-    "remark-toc": "^9.0.0",
+    "rehype-autolink-headings": "^7.1.0",
+    "rehype-external-links": "^3.0.0",
+    "rehype-slug": "^6.0.0",
     "satori": "^0.10.8",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.3.2"
@@ -32,7 +34,7 @@
     "@astrojs/react": "^3.0.2",
     "@astrojs/sitemap": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
-    "@divriots/jampack": "^0.20.2",
+    "@divriots/jampack": "^0.22.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.2.22",
