--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/github-slugger": "^1.3.0",
     "@types/react": "^18.2.22",
     "@typescript-eslint/parser": "^6.7.3",
+    "@waline/client": "^2.15.8",
     "astro-eslint-parser": "^0.15.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
