fix: add @vercel/speed-insights and @vercel/analytics explictly

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ fabric.properties
 .idea/**/azureSettings.xml
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,webstorm,vim,macos,node
+.vercel/
