--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "astro": "^4.0.3",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-external-links": "^3.0.0",
     "rehype-slug": "^6.0.0",
