--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "astro": "^4.0.3",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
+    "mdast-util-find-and-replace": "^3.0.1",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
