--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.0.0",
-    "@astrojs/rss": "^4.0.1",
-    "@astrojs/vercel": "^6.0.1",
+    "@astrojs/mdx": "^2.1.0",
+    "@astrojs/rss": "^4.0.4",
+    "@astrojs/vercel": "^7.0.2",
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@resvg/resvg-js": "^2.4.1",
     "@vercel/analytics": "^1.1.1",
     "@vercel/kv": "^1.0.0",
-    "astro": "^4.0.3",
+    "@vercel/speed-insights": "^1.0.8",
+    "astro": "^4.2.6",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
     "mdast-util-find-and-replace": "^3.0.1",
@@ -38,10 +39,10 @@
     "typescript": "^5.3.2"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.3.2",
-    "@astrojs/react": "^3.0.7",
-    "@astrojs/sitemap": "^3.0.3",
-    "@astrojs/tailwind": "^5.0.3",
+    "@astrojs/check": "^0.4.1",
+    "@astrojs/react": "^3.0.9",
+    "@astrojs/sitemap": "^3.0.5",
+    "@astrojs/tailwind": "^5.1.0",
     "@divriots/jampack": "^0.22.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
