--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@astrojs/mdx": "^2.2.2",
-    "@astrojs/rss": "^4.0.5",
-    "@astrojs/vercel": "^7.5.0",
+    "@astrojs/mdx": "^4.3.6",
+    "@astrojs/rss": "^4.0.12",
+    "@astrojs/vercel": "^8.2.8",
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@resvg/resvg-js": "^2.4.1",
     "@vercel/analytics": "^1.1.1",
     "@vercel/kv": "^1.0.0",
     "@vercel/speed-insights": "^1.0.8",
-    "astro": "^4.5.12",
+    "astro": "^5.14.1",
     "fuse.js": "^6.6.2",
     "github-slugger": "^2.0.0",
     "mdast-util-find-and-replace": "^3.0.1",
@@ -39,10 +39,10 @@
     "typescript": "^5.3.2"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.5.10",
-    "@astrojs/react": "^3.1.0",
-    "@astrojs/sitemap": "^3.1.2",
-    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/check": "^0.9.4",
+    "@astrojs/react": "^4.4.0",
+    "@astrojs/sitemap": "3.6.0",
+    "@astrojs/tailwind": "^6.0.2",
     "@divriots/jampack": "^0.22.1",
     "@tailwindcss/typography": "^0.5.10",
     "@types/github-slugger": "^1.3.0",
